@@ -20,7 +20,7 @@ from lsl.common import dp as dp_common
 from lsl.correlator import uvUtils
 
 __version__ = '0.2'
-__revision__ = '$ Revision: 8 $'
+__revision__ = '$ Revision: 10 $'
 __all__ = ['BeamformingError', 'calcDelay', 'intDelayAndSum', 'intBeamShape', 'fftDelayAndSum', 'fftBeamShape', '__version__', '__revision__', '__all__']
 
 class BeamformingError(Exception):
@@ -135,16 +135,31 @@ def intDelayAndSum(antennas, data, sampleRate=dp_common.fS, azimuth=0.0, elevati
 	delays = calcDelay(antennas, azimuth=azimuth, elevation=elevation)
 	delays = numpy.round(delays*sampleRate).astype(numpy.int16)
 
+	# Figure out the polarizations
+	pols = numpy.array([ant.pol for ant in antennas])
+	pol0 = numpy.where( pols == 0 )[0]
+	pol1 = numpy.where( pols == 1 )[0]
+
 	# Make the delays into something meaningful for the shifting of the data 
 	# streams
 	delays = delays.max() - delays
 
 	# Delay and sum by looping over stands inside of looping over times
-	output = numpy.zeros((data.shape[1]-delays.max()), dtype=data.dtype)
-	for s in list(range(len(antennas))):
+	output = numpy.zeros((2, (data.shape[1]-delays.max())), dtype=data.dtype)
+	for s,p in zip(range(len(antennas)), pols):
 		start = delays[s]
 		stop = data.shape[1] - delays.max() + start
-		output = output + data[s,start:stop]
+		output[p,:] += data[s,start:stop]
+
+	# Check for empty polarization data.  Always return a 2-D array for the data
+	if len(pol0) == 0:
+		output = output[1,:]
+		output.shape = (1,) + output.shape
+	elif len(pol1) == 0:
+		output = output[0,:]
+		output.shape = (1,) + output.shape
+	else:
+		pass
 
 	# Done
 	return output
@@ -175,6 +190,9 @@ def __intBeepAndSweep(antennas, arrayXYZ, t, freq, azimuth, elevation, beamShape
 
 	# Beamform with delay-and-sum and store the RMS result
 	beamHere = intDelayAndSum(antennas, signals, sampleRate=sampleRate, azimuth=direction[0], elevation=direction[1])
+	
+	# Reduce the array dimensions
+	beamHere = beamHere[0,:]
 
 	# Return
 	sigHere = numpy.sqrt((beamHere**2).mean())
@@ -191,6 +209,10 @@ def intBeamShape(antennas, sampleRate=dp_common.fS, azimuth=0.0, elevation=90.0,
 		Switched over to passing in Antenna instances generated by the
 		:mod:`lsl.common.stations` module instead of a list of stand ID
 		numbers.
+		
+	.. versionchanged:: 0.4.2
+		Allowed for multiple polarization data to be delayed-and-sumed correctly 
+		and insured that a 2-D array is always returned (pol(s) by samples)
 	"""
 
 	# Set the frequency
@@ -324,6 +346,10 @@ def fftDelayAndSum(antennas, data, sampleRate=dp_common.fS, LFFT=256, CentralFre
 		Switched over to passing in Antenna instances generated by the
 		:mod:`lsl.common.stations` module instead of a list of stand ID
 		numbers.
+		
+	.. versionchanged:: 0.4.2
+		Allowed for multiple polarization data to be delayed-and-sumed correctly 
+		and insured that a 3-D array is always returned (pol(s) by channels by time)
 	"""
 
 	# Get the stand delays in seconds
@@ -334,6 +360,11 @@ def fftDelayAndSum(antennas, data, sampleRate=dp_common.fS, LFFT=256, CentralFre
 	delays = delays.max() - delays
 	intDelays = numpy.round(delays*sampleRate).astype(numpy.int16)
 	frcDelays = delays - intDelays/sampleRate
+	
+	# Figure out the polarizations
+	pols = numpy.array([ant.pol for ant in antennas])
+	pol0 = numpy.where( pols == 0 )[0]
+	pol1 = numpy.where( pols == 1 )[0]
 
 	# Compute the frequencies of the FFT
 	freq = numpy.fft.fftfreq(LFFT, d=1.0/sampleRate)
@@ -342,15 +373,25 @@ def fftDelayAndSum(antennas, data, sampleRate=dp_common.fS, LFFT=256, CentralFre
 		freq = numpy.fft.fftshift(freq)
 
 	# Loop over stands and FFT sections to compute the formed beam
-	output = numpy.zeros((LFFT, (data.shape[1]-intDelays.max())/LFFT), dtype=numpy.complex64)
-	for s in list(range(len(stands))):
-		for l in list(range(output.shape[1])):
+	output = numpy.zeros((2, LFFT, (data.shape[1]-intDelays.max())/LFFT), dtype=numpy.complex64)
+	for s,p in zip(range(len(antennas)), pols):
+		for l in range(output.shape[2]):
 			section = data[s,(l*LFFT+intDelays[s]):((l+1)*LFFT+intDelays[s])]
 			sectionF = numpy.fft.fft(section)
 			if data.dtype.kind == 'c':
 				sectionF = numpy.fft.fftshift(sectionF)
-			sectionF *= numpy.exp(-2j*numpy.pi*freq*frcDelays[s])
-			output[:,l] = output[:,l] + sectionF
+			sectionF *= numpy.exp(2j*numpy.pi*freq*frcDelays[s])
+			output[p,:,l] += sectionF
+
+	# Check for empty polarization data.  Always return a 3-D array for the data
+	if len(pol0) == 0:
+		output = output[1,:,:]
+		output.shape = (1,) + output.shape
+	elif len(pol1) == 0:
+		output = output[0,:,:]
+		output.shape = (1,) + output.shape
+	else:
+		pass
 
 	# Done
 	return (freq, output)
